# python

expense_tracker/: expense.py  main.py  tracker.py  utils.py
flask-app-v1/: .gitignore  DRAFT.md  main.py  pyproject.toml
flask-app-v1/app/: config.py  schemas.py
flask-app-v1/app/dto/: product_dto.py  user_dto.py
flask-app-v1/app/mappers/: product_mapper.py  user_mapper.py
flask-app-v1/app/models/: models.py  product.py  user.py
flask-app-v1/app/repos/: BaseRepo.py  ProductRepo.py  UserRepo.py
flask-app-v1/app/routes/: user_routes.py
flask-app-v1/app/services/: user_service.py
flask-app-v1/other/: dataclass.md  sqlalchemy.md
flask-app-v1/other/sketch/: overview_v1.md  overview_v2.md  overview_v3.md
python-design-patterns/: main.py  pyproject.toml
python-design-patterns/factory-pattern/: main.py
python-design-patterns/factory-pattern/enums/: shape_type.py
python-design-patterns/factory-pattern/factory/: circle.py  shape.py  shape_factory.py  square.py
